--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -56,6 +56,8 @@ jobs:
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
         run: |
+          hugo mod get
+
           hugo \
             --gc \
             --minify \
